--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,11 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - name: Upload HTML artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: html-report-artifacts
+        path: |
+          build/index.html
+          build/modified.html
+
